--- a/src/styles.css
+++ b/src/styles.css
@@ -1,109 +1,155 @@
 body {
-  background: #f9f7fe;
-  font-family: "Roboto", sans-serif;
+    background: #f9f7fe;
+    font-family: "Roboto", sans-serif;
 }
 
 a {
-  color: #885df1;
+    color: #885df1;
 }
 
 .weather-app {
-  background: white;
-  max-width: 600px;
-  margin: 60px auto;
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+    background: white;
+    max-width: 600px;
+    margin: 60px auto;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 }
 
 header {
-  border-bottom: 1px solid #f9f7fe;
-  padding-bottom: 30px;
+    border-bottom: 1px solid #f9f7fe;
+    padding-bottom: 30px;
 }
 
 .search-input {
-  background-color: #f9f7fe;
-  border: none;
-  color: rgba(39, 33, 66, 0.4);
-  font-size: 16px;
-  padding: 20px;
-  width: 75%;
-  border-radius: 6px;
+    background-color: #f9f7fe;
+    border: none;
+    color: rgba(39, 33, 66, 0.4);
+    font-size: 16px;
+    padding: 20px;
+    width: 75%;
+    border-radius: 6px;
 }
 
 .search-button {
-  margin-left: 5px;
-  font-size: 16px;
-  background-color: #885df1;
-  color: white;
-  border: none;
-  padding: 20px;
-  line-height: 1;
-  border-radius: 5px;
+    margin-left: 5px;
+    font-size: 16px;
+    background-color: #885df1;
+    color: white;
+    border: none;
+    padding: 20px;
+    line-height: 1;
+    border-radius: 5px;
 }
 
 main {
-  padding: 30px 0;
+    padding: 30px 0;
 }
 
-.current-temperature {
-  font-size: 48px;
-}
+
 
 .current-weather {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .current-city {
-  font-size: 38px;
-  font-weight: 900;
-  margin: 0;
+    font-size: 38px;
+    font-weight: 900;
+    margin: 0;
 }
+
 .current-details {
-  color: rgba(39, 33, 66, 0.4);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
+    color: rgba(39, 33, 66, 0.4);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
 }
 
 .current-details strong {
-  color: #f65282;
+    color: #f65282;
 }
 
 .current-temperature-icon {
-  position: relative;
-  top: -8px;
-  font-size: 40px;
-  margin-right: 10px;
+    position: relative;
+    top: -8px;
+    font-size: 40px;
+    margin-right: 10px;
+}
+
+.current-temperature {
+    font-size: 48px;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.icon {
+    height: 100px;
+    width: 100px;
+    margin: 10px;
+
 }
 
 .current-temperature-value {
-  font-size: 80px;
-  font-weight: bold;
+    font-size: 60px;
+    font-weight: bold;
 }
 
 .current-temperature-unit {
-  font-size: 28px;
-  position: relative;
-  top: -38px;
+    font-size: 30px;
+    position: relative;
+    top: -10px;
 }
 
+.forecast-container {
+    text-align: center;
+    display: flex;
+    margin: 20px;
+    /* Display forecast days side by side */
+}
+
+.forecast-day {
+
+    margin: 15px;
+
+}
+
+.day-row
+{
+    color:lightslategray;
+    font-size: 16px;
+    margin-left: 5px;
+}
+.icon-row
+{
+    margin-left: 5px;
+
+
+}
+.icon-row img
+{
+    width: 70px;
+    
+}
+.min{
+    color:plum;
+    margin-left:5px;
+    font-weight: bold;
+}
+.max
+{
+    color:lightsalmon;
+    margin-left: 7px;
+
+}
 footer {
-  border-top: 1px solid #f9f7fe;
-  text-align: center;
-  padding-top: 15px;
+    border-top: 1px solid #f9f7fe;
+    text-align: center;
+    padding-top: 15px;
 
-  color: rgba(39, 33, 66, 0.4);
+    color: rgba(39, 33, 66, 0.4);
 }
-.forecast-days{
-  display:flex;
-  justify-content: space-between;
-  margin-top: 20px;
-  color: rgba(39, 33, 66, 0.4);
-  font-size:16px;
-}
-.forecast-days div {
-    flex: 1; 
-    text-align: center; 
-}
+
+
+
